--- a/environment.yml
+++ b/environment.yml
@@ -3,10 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python
-  - requests
-  - pandas
-  - numpy
-  - simplekml
-  - pyyaml
-  - Jinja2
+  - python=3.12.2
+  - requests=2.31.0
+  - pandas=2.2.1
+  - numpy=1.26.4
+  - simplekml=1.3.6
+  - pyyaml=6.0.1
+  - Jinja2=3.1.3
